# inhibit

./: README.md  io.ewlsh.Inhibit.json  meson.build
data/: io.ewlsh.Inhibit.desktop.in  io.ewlsh.Inhibit.gschema.xml  io.ewlsh.Inhibit.metainfo.xml.in  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: inhibit.js  inhibitor.data.gresource.xml  io.ewlsh.Inhibit.src.gresource.xml  main.js  meson.build  window.js  window.ui
